dashy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashy
    env: dev
  name: dashy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
        env: test
    spec:
      containers:
      - image: lissy93/dashy:release-3.1.1
        name: dashy
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
  labels:
    app: dashy
spec:
  selector:
    app: dashy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
